[package]
name = "untitled_os"
version = "0.1.0"
authors = ["k-start <startkie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10.1"
spin = "0.5.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = ["boot"]