[package]
name = "untitled_os"
version = "0.1.0"
authors = ["k-start <startkie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "untitled_os_lib"
path = "src/lib.rs"

[dependencies]
bootloader = "0.10.6"
spin = "0.9.2"
x86_64 = "0.14.3"
pic8259 = "0.10.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = ["boot"]